Increase serviceUrl field max length to 1024
Increase the maximum size of the serviceUrl field in the
Notebook and Pipeline objects to 1024 characters.

Change-Id: Icf1fc016803c2643a16c37f80284e1bbce30f604
Issue-Id: ACUMOS-3422
Signed-off-by: Lott, Christopher (cl778h) <cl778h@att.com>